--- a/HotelManagement/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement/HotelManagement.csproj
@@ -244,6 +244,9 @@
       <DependentUpon>ReportsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Resources\DatePickerDateFormat.cs" />
+    <Compile Include="Views\Report\ServiceByRoomTypeView.xaml.cs">
+      <DependentUpon>ServiceByRoomTypeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Report\TopServiceView.xaml.cs">
       <DependentUpon>TopServiceView.xaml</DependentUpon>
     </Compile>
@@ -360,6 +363,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ReportsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Report\ServiceByRoomTypeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
